Fix failing assertion when datebar selection is extended beyond valid region.

BUG: 476862